hoping to fix collapse

--- a/frontend/src/css/WhereImGoing.css
+++ b/frontend/src/css/WhereImGoing.css
@@ -6,11 +6,12 @@
 }
 
 .plansContainer {
-    flex-grow: 1;
     display: grid;
-    grid-template-columns: repeat(2,minmax(100px, 1fr));
+    grid-template-columns: repeat(2, 1fr);
     grid-auto-rows: 1fr;
     gap: 1rem;
+    padding: 1rem;
+    flex-grow: 1;
     height: 100%;
     margin: 0 auto;
     justify-items: center;
